--- a/base/html/map_main.html
+++ b/base/html/map_main.html
@@ -1,17 +1,92 @@
 <!DOCTYPE html>
 <html lang="ko">
-<head>
-  <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-  <title>지도</title>
-  <script type="text/javascript" src="/base/js/lib/jquery-3.5.1.min.js"></script>
-  <script type="text/javascript" src="/base/js/lib/jquery-ui.min.js"></script>
-  <!-- <script type="text/javascript" src="/base/js/lib/jquery.modal.min.js"></script> -->
-  <script type="text/javascript" src="/base/js/common/includeHTML.js"></script> <!-- 퍼블리싱 확인용 include -->
-  <script type="text/javascript" src="/base/js/common/ui.js"></script>
-  <link rel="stylesheet" type="text/css" href="/base/css/common.css" />
-</head>
-<body>
-  
-</body>
+  <head>
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <title>지도</title>
+    <script type="text/javascript" src="/base/js/lib/jquery-3.5.1.min.js"></script>
+    <script type="text/javascript" src="/base/js/lib/jquery-ui.min.js"></script>
+    <script type="text/javascript" src="/base/js/lib/semantic.min.js"></script>
+    <!-- <script type="text/javascript" src="/base/js/lib/jquery.modal.min.js"></script> -->
+    <script type="text/javascript" src="/base/js/common/includeHTML.js"></script>
+    <!-- 퍼블리싱 확인용 include -->
+    <script type="text/javascript" src="/base/js/common/ui.js"></script>
+    <link rel="stylesheet" type="text/css" href="/base/css/common.css" />
+  </head>
+  <body>
+    <div class="wrapper">
+      <nav class="gnb">
+        <h1><img src="/base/images/logo.png" alt="BYDA로고" /></h1>
+        <div class="ui vertical menu">
+          <a href="#" class="item">Dashboard</a>
+          <a href="#" class="item">지도</a>
+          <div class="ui left dropdown link item">
+            <i class="dropdown icon"></i>
+            설정
+            <div class="menu">
+              <div class="item">Inbox</div>
+              <div class="item">Starred</div>
+              <div class="item">Sent Mail</div>
+              <div class="item">Drafts (143)</div>
+              <div class="divider"></div>
+              <div class="item">Spam (1009)</div>
+              <div class="item">Trash</div>
+            </div>
+          </div>
+          <!-- //설정 -->
+          <a href="#" class="item">검색</a>
+          <a class="item"> Help </a>
+          <div class="ui left dropdown link item">
+            <i class="dropdown icon"></i>
+            스마트 교차로
+            <div class="menu">
+              <div class="item">Inbox</div>
+              <div class="item">Starred</div>
+              <div class="item">Sent Mail</div>
+              <div class="item">Drafts (143)</div>
+              <div class="divider"></div>
+              <div class="item">Spam (1009)</div>
+              <div class="item">Trash</div>
+            </div>
+          </div>
+          <!-- //스마트 교차로 -->
+          <div class="ui left dropdown link item">
+            <i class="dropdown icon"></i>
+            스마트 횡단보도
+            <div class="menu">
+              <div class="item">Inbox</div>
+              <div class="item">Starred</div>
+              <div class="item">Sent Mail</div>
+              <div class="item">Drafts (143)</div>
+              <div class="divider"></div>
+              <div class="item">Spam (1009)</div>
+              <div class="item">Trash</div>
+            </div>
+          </div>
+          <!-- //스마트 횡단보도 -->
+        </div>
+        <!-- //menu -->
+        <aside class="aside">
+          <button type="button" data-target="">알림</button>
+          <a href="#">계정설정</a>
+          <span class="current-time">2023. 05. 01 11:09:22</span>
+        </aside>
+      </nav>
+
+      <main class="ly-container">
+        <!-- temp-map 클래스명은 퍼블리싱 작업때문에 넣었습니다. 개발페이지에서는 삭제해주세요. -->
+        <div class="ly-map temp-map"></div>
+
+        <footer class="ly-copyright">Copyright 2021, BYDA CO, LTD ALL rights reserved.</footer>
+        <!-- //ly-copyright -->
+      </main>
+      <!-- //ly-container -->
+    </div>
+    <!-- //wrapper -->
+    <script>
+      $('.ui.dropdown').dropdown({
+        on: 'hover',
+      });
+    </script>
+  </body>
 </html>
