--- a/base/html/set_area.html
+++ b/base/html/set_area.html
@@ -3,7 +3,7 @@
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <title>지도</title>
+    <title>구역설정</title>
     <script type="text/javascript" src="/base/js/lib/jquery-3.5.1.min.js"></script>
     <script type="text/javascript" src="/base/js/lib/jquery-ui.min.js"></script>
     <script type="text/javascript" src="/base/js/lib/semantic.min.js"></script>
@@ -172,8 +172,112 @@
       </nav>
 
       <main class="ly-container">
-        <!-- temp-map 클래스명은 퍼블리싱 작업때문에 넣었습니다. 개발페이지에서는 삭제해주세요. -->
-        <div class="ly-map temp-map"></div>
+        <div class="ly-sub">
+          <div class="ly-setting">
+            <div class="ui breadcrumb">
+              <i class="home icon"></i>
+              <i class="right angle icon divider"></i>
+              <span class="section">설정</span>
+              <i class="right angle icon divider"></i>
+              <div class="active section">구역설정</div>
+            </div>
+            <!-- //breadcrumb -->
+
+            <section class="filter-grouop">
+              <div class="inner">
+                <div class="ui segment label-dropdown">
+                  <em>행정구역</em>
+                  <div class="s-dropdown-wrap">
+                    <select class="ui search dropdown">
+                      <option value="전체">전체</option>
+                      <option value="아이템1">아이템1</option>
+                      <option value="">아이템2</option>
+                      <option value="">아이템3</option>
+                    </select>
+                  </div>
+                  <!-- //s-dropdown-wrap -->
+                </div>
+                <!-- //segment -->
+                <button class="ui primary basic button">검색</button>
+              </div>
+              <!-- //inner -->
+            </section>
+            <!-- //filter-grouop -->
+
+            <section class="button-function-group">
+              <div class="left">
+                <div class="ui basic buttons">
+                  <button class="ui secondary basic button rounded">추가</button>
+                  <button class="ui secondary basic button rounded">삭제</button>
+                </div>
+                <!-- //buttons -->
+              </div>
+              <!-- //left -->
+              <div class="right">
+                <button class="ui primary basic button rounded">Excel Down</button>
+              </div>
+            </section>
+            <!-- //button-function-group -->
+
+            <div class="data-tbl-very">
+              <table class="ui very basic table">
+                <thead>
+                  <tr>
+                    <th></th>
+                    <th>No</th>
+                    <th>행정구역</th>
+                    <th>시군구</th>
+                    <th>구역 명</th>
+                    <th>위도</th>
+                    <th>경도</th>
+                    <th>표출레벨</th>
+                    <th>기본 구역</th>
+                    <th>수정일시</th>
+                  </tr>
+                </thead>
+                <tbody>
+                  <tr>
+                    <td></td>
+                    <td>1</td>
+                    <td>서울특별시</td>
+                    <td>종로구</td>
+                    <td>서울시 종로구</td>
+                    <td>37.477980</td>
+                    <td>126.881465</td>
+                    <td>15</td>
+                    <td></td>
+                    <td>2021-06-07 12:31:33</td>
+                  </tr>
+                </tbody>
+              </table>
+            </div>
+            <!-- //data-tbl-very -->
+
+            <div class="paging-group">
+              <div class="ui basic buttons">
+                <i class="angle double left icon"></i>
+                <i class="angle left icon"></i>
+              </div>
+              <a href="#">1</a>
+              <a href="#">2</a>
+              <a href="#">3</a>
+              <a href="#">4</a>
+              <a href="#">5</a>
+              <a href="#">5</a>
+              <a href="#">6</a>
+              <a href="#">7</a>
+              <a href="#">8</a>
+              <a href="#">10</a>
+              <div class="ui basic buttons">
+                <i class="angle double right icon"></i>
+                <i class="angle right icon"></i>
+              </div>
+            </div>
+            <!-- //paging-group -->
+          </div>
+          <!-- //ly-setting -->
+        </div>
+        <!-- //ly-sub -->
 
         <footer class="ly-copyright">Copyright 2021, BYDA CO, LTD ALL rights reserved.</footer>
         <!-- //ly-copyright -->
@@ -237,17 +341,6 @@
           }, 250);
         }
       });
-
-      // $('.gnb').on('mouseenter', function () {
-      //   $('.gnb').animate({
-      //     width: '180px',
-      //   });
-      // });
-      // $('.gnb').on('mouseleave', function () {
-      //   $('.gnb').animate({
-      //     width: '54px',
-      //   });
-      // });
     </script>
   </body>
 </html>
