--- a/base/html/map_main.html
+++ b/base/html/map_main.html
@@ -4,13 +4,14 @@
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <title>지도</title>
-    <script type="text/javascript" src="/base/js/lib/jquery-3.5.1.min.js"></script>
-    <script type="text/javascript" src="/base/js/lib/jquery-ui.min.js"></script>
-    <script type="text/javascript" src="/base/js/lib/semantic.min.js"></script>
+    <script src="/base/js/lib/jquery-3.5.1.min.js"></script>
+    <script src="/base/js/lib/jquery-ui.min.js"></script>
+    <script src="/base/js/lib/semantic.min.js"></script>
+    <script src="/base/js/lib/jquery.modal.min.js"></script>
     <!-- includeHTML.js : 퍼블리싱 확인용 include -->
-    <script type="text/javascript" src="/base/js/common/includeHTML.js"></script>
-    <script type="text/javascript" src="/base/js/common/ui.js"></script>
-    <link rel="stylesheet" type="text/css" href="/base/css/common.css" />
+    <script src="/base/js/common/includeHTML.js"></script>
+    <script src="/base/js/common/ui.js"></script>
+    <link rel="stylesheet" href="/base/css/common.css" />
   </head>
   <body>
     <div class="wrapper">
@@ -181,73 +182,5 @@
       <!-- //ly-container -->
     </div>
     <!-- //wrapper -->
-    <script>
-      const $dropdownEl = $('.gnb .ui.dropdown');
-      let isAccordionState = false; // 1depth가 자식요소로 accordion 메뉴를 포함하고 있는지 상태 체크
-
-      // 스크롤 유무 체크 커스텀 프로퍼티
-      $.fn.hasScrollBar = function () {
-        return (this.prop('scrollHeight') == 0 && this.prop('clientHeight') == 0) || this.prop('scrollHeight') > this.prop('clientHeight');
-      };
-
-      // 1depth 메뉴의 하위 메뉴 initialize
-      $dropdownEl.dropdown({
-        onShow: function () {},
-        onHide: function () {
-          if ($(this).find('.ui.accordion').length !== 0) {
-            return isAccordionState;
-          } else {
-            return true;
-          }
-        },
-      });
-
-      // 2depth 아코디언메뉴 initialize
-      $('.ui.accordion').accordion();
-
-      // 2depth 아코디언메뉴 클릭시 아코디언메뉴 높이값 실시간 체크하여 하단에 닿으면 기준점을 bottom으로 변경
-      $('.ui.accordion').on('click', function () {
-        const $this = $(this);
-        setTimeout(function () {
-          if ($('body').hasScrollBar()) {
-            $this.closest('.ui.dropdown').addClass('upward2');
-          } else {
-            $this.closest('.ui.dropdown').removeClass('upward2');
-          }
-        }, 250);
-      });
-
-      // 1depth 메뉴 클릭시 isAccordionState의 side effect 처리
-      $dropdownEl.on('click', function () {
-        isAccordionState = true;
-        setTimeout(function () {
-          isAccordionState = false;
-        }, 250);
-      });
-
-      // 아코디언메뉴 클릭시 isAccordionState의 side effect 처리
-      $('.gnb .ui.dropdown > .menu').on('mouseleave', function () {
-        isAccordionState = true;
-        if ($(this).parent().is('.active')) {
-          $(this).parent().trigger('click');
-          setTimeout(function () {
-            isAccordionState = false;
-            $('.ui.accordion').accordion('close', 0);
-            $dropdownEl.removeClass('upward2'); //upward2 클래스 제거
-          }, 250);
-        }
-      });
-
-      // $('.gnb').on('mouseenter', function () {
-      //   $('.gnb').animate({
-      //     width: '180px',
-      //   });
-      // });
-      // $('.gnb').on('mouseleave', function () {
-      //   $('.gnb').animate({
-      //     width: '54px',
-      //   });
-      // });
-    </script>
   </body>
 </html>
