1. 지점 설정 목록 화면 작업 2. 지점 설정(교차로, 횡단보도) 팝업(상세, 추가, 수정) 작업

--- a/base/html/index.html
+++ b/base/html/index.html
@@ -30,6 +30,13 @@
       .col-memo p {
         color: red;
       }
+
+      .c-txt {
+        padding-left: 10px;
+        text-indent: -10px;
+        color: green !important;
+        text-decoration: underline;
+      }
     </style>
   </head>
   <body>
@@ -259,7 +266,9 @@
                           <!-- <td class="col-date"></td> -->
                           <td class="col-complete" data-complete="완료"></td>
                           <!-- <td class="col-worker"></td> -->
-                          <td class="col-memo"></td>
+                          <td class="col-memo">
+                            <p class="c-txt">- 팝업 수정 버튼 클릭시 수정 팝업 노출되는 케이스는 이거 참고</p>
+                          </td>
                         </tr>
                         <tr>
                           <td class="col-num"><!--자동입력--></td>
@@ -299,7 +308,7 @@
                           <td class="col-type" data-type=""></td>
                           <td class="col-url">html/set_point.html</td>
                           <!-- <td class="col-date"></td> -->
-                          <td class="col-complete" data-complete=""></td>
+                          <td class="col-complete" data-complete="완료"></td>
                           <!-- <td class="col-worker"></td> -->
                           <td class="col-memo"></td>
                         </tr>
@@ -313,7 +322,7 @@
                           <td class="col-type" data-type="모달팝업"></td>
                           <td class="col-url">html/set_point_view.html</td>
                           <!-- <td class="col-date"></td> -->
-                          <td class="col-complete" data-complete=""></td>
+                          <td class="col-complete" data-complete="완료"></td>
                           <!-- <td class="col-worker"></td> -->
                           <td class="col-memo"></td>
                         </tr>
@@ -327,7 +336,7 @@
                           <td class="col-type" data-type="모달팝업"></td>
                           <td class="col-url">html/set_point_add.html</td>
                           <!-- <td class="col-date"></td> -->
-                          <td class="col-complete" data-complete=""></td>
+                          <td class="col-complete" data-complete="완료"></td>
                           <!-- <td class="col-worker"></td> -->
                           <td class="col-memo"></td>
                         </tr>
@@ -341,7 +350,7 @@
                           <td class="col-type" data-type="모달팝업"></td>
                           <td class="col-url">html/set_point_edit.html</td>
                           <!-- <td class="col-date"></td> -->
-                          <td class="col-complete" data-complete=""></td>
+                          <td class="col-complete" data-complete="완료"></td>
                           <!-- <td class="col-worker"></td> -->
                           <td class="col-memo"></td>
                         </tr>
@@ -355,7 +364,7 @@
                           <td class="col-type" data-type="모달팝업"></td>
                           <td class="col-url">html/set_point_view2.html</td>
                           <!-- <td class="col-date"></td> -->
-                          <td class="col-complete" data-complete=""></td>
+                          <td class="col-complete" data-complete="완료"></td>
                           <!-- <td class="col-worker"></td> -->
                           <td class="col-memo"></td>
                         </tr>
@@ -369,7 +378,7 @@
                           <td class="col-type" data-type="모달팝업"></td>
                           <td class="col-url">html/set_point_add2.html</td>
                           <!-- <td class="col-date"></td> -->
-                          <td class="col-complete" data-complete=""></td>
+                          <td class="col-complete" data-complete="완료"></td>
                           <!-- <td class="col-worker"></td> -->
                           <td class="col-memo"></td>
                         </tr>
@@ -382,6 +391,132 @@
                           <td class="col-5depth"></td>
                           <td class="col-type" data-type="모달팝업"></td>
                           <td class="col-url">html/set_point_edit2.html</td>
+                          <!-- <td class="col-date"></td> -->
+                          <td class="col-complete" data-complete="완료"></td>
+                          <!-- <td class="col-worker"></td> -->
+                          <td class="col-memo"></td>
+                        </tr>
+                        <tr>
+                          <td class="col-num"><!--자동입력--></td>
+                          <td class="col-1depth"></td>
+                          <td class="col-2depth">코드관리 목록</td>
+                          <td class="col-3depth"></td>
+                          <td class="col-4depth"></td>
+                          <td class="col-5depth"></td>
+                          <td class="col-type" data-type=""></td>
+                          <td class="col-url">html/set_code_admin.html</td>
+                          <!-- <td class="col-date"></td> -->
+                          <td class="col-complete" data-complete=""></td>
+                          <!-- <td class="col-worker"></td> -->
+                          <td class="col-memo"></td>
+                        </tr>
+                        <tr>
+                          <td class="col-num"><!--자동입력--></td>
+                          <td class="col-1depth"></td>
+                          <td class="col-2depth"></td>
+                          <td class="col-3depth">코드 상세</td>
+                          <td class="col-4depth"></td>
+                          <td class="col-5depth"></td>
+                          <td class="col-type" data-type="모달팝업"></td>
+                          <td class="col-url">html/set_code_view.html</td>
+                          <!-- <td class="col-date"></td> -->
+                          <td class="col-complete" data-complete=""></td>
+                          <!-- <td class="col-worker"></td> -->
+                          <td class="col-memo"></td>
+                        </tr>
+                        <tr>
+                          <td class="col-num"><!--자동입력--></td>
+                          <td class="col-1depth"></td>
+                          <td class="col-2depth"></td>
+                          <td class="col-3depth">코드 추가</td>
+                          <td class="col-4depth"></td>
+                          <td class="col-5depth"></td>
+                          <td class="col-type" data-type="모달팝업"></td>
+                          <td class="col-url">html/set_code_add.html</td>
+                          <!-- <td class="col-date"></td> -->
+                          <td class="col-complete" data-complete=""></td>
+                          <!-- <td class="col-worker"></td> -->
+                          <td class="col-memo"></td>
+                        </tr>
+                        <tr>
+                          <td class="col-num"><!--자동입력--></td>
+                          <td class="col-1depth"></td>
+                          <td class="col-2depth"></td>
+                          <td class="col-3depth">코드 수정</td>
+                          <td class="col-4depth"></td>
+                          <td class="col-5depth"></td>
+                          <td class="col-type" data-type="모달팝업"></td>
+                          <td class="col-url">html/set_code_edit.html</td>
+                          <!-- <td class="col-date"></td> -->
+                          <td class="col-complete" data-complete=""></td>
+                          <!-- <td class="col-worker"></td> -->
+                          <td class="col-memo"></td>
+                        </tr>
+                        <tr>
+                          <td class="col-num"><!--자동입력--></td>
+                          <td class="col-1depth">교차로</td>
+                          <td class="col-2depth">시스템 관리</td>
+                          <td class="col-3depth">도로 관리</td>
+                          <td class="col-4depth">도로 목록</td>
+                          <td class="col-5depth"></td>
+                          <td class="col-type" data-type=""></td>
+                          <td class="col-url">html/road_list.html</td>
+                          <!-- <td class="col-date"></td> -->
+                          <td class="col-complete" data-complete=""></td>
+                          <!-- <td class="col-worker"></td> -->
+                          <td class="col-memo"></td>
+                        </tr>
+                        <tr>
+                          <td class="col-num"><!--자동입력--></td>
+                          <td class="col-1depth"></td>
+                          <td class="col-2depth"></td>
+                          <td class="col-3depth"></td>
+                          <td class="col-4depth">도로 상세</td>
+                          <td class="col-5depth"></td>
+                          <td class="col-type" data-type="모달팝업"></td>
+                          <td class="col-url">html/road_view.html</td>
+                          <!-- <td class="col-date"></td> -->
+                          <td class="col-complete" data-complete=""></td>
+                          <!-- <td class="col-worker"></td> -->
+                          <td class="col-memo"></td>
+                        </tr>
+                        <tr>
+                          <td class="col-num"><!--자동입력--></td>
+                          <td class="col-1depth"></td>
+                          <td class="col-2depth"></td>
+                          <td class="col-3depth"></td>
+                          <td class="col-4depth">도로 추가</td>
+                          <td class="col-5depth"></td>
+                          <td class="col-type" data-type="모달팝업"></td>
+                          <td class="col-url">html/road_add.html</td>
+                          <!-- <td class="col-date"></td> -->
+                          <td class="col-complete" data-complete=""></td>
+                          <!-- <td class="col-worker"></td> -->
+                          <td class="col-memo"></td>
+                        </tr>
+                        <tr>
+                          <td class="col-num"><!--자동입력--></td>
+                          <td class="col-1depth"></td>
+                          <td class="col-2depth"></td>
+                          <td class="col-3depth"></td>
+                          <td class="col-4depth">도로 수정</td>
+                          <td class="col-5depth"></td>
+                          <td class="col-type" data-type="모달팝업"></td>
+                          <td class="col-url">html/road_edit.html</td>
+                          <!-- <td class="col-date"></td> -->
+                          <td class="col-complete" data-complete=""></td>
+                          <!-- <td class="col-worker"></td> -->
+                          <td class="col-memo"></td>
+                        </tr>
+                        <tr>
+                          <td class="col-num"><!--자동입력--></td>
+                          <td class="col-1depth"></td>
+                          <td class="col-2depth">시스템 설정</td>
+                          <td class="col-3depth">영상인식 ROI 설정</td>
+                          <td class="col-4depth">목록</td>
+                          <td class="col-5depth"></td>
+                          <td class="col-type" data-type=""></td>
+                          <td class="col-url">html/crossroads_roi_set_list.html</td>
                           <!-- <td class="col-date"></td> -->
                           <td class="col-complete" data-complete=""></td>
                           <!-- <td class="col-worker"></td> -->
@@ -396,76 +531,6 @@
                           <td class="col-5depth"></td>
                           <td class="col-type" data-type=""></td>
                           <td class="col-url">html/search_main.html</td>
-                          <!-- <td class="col-date"></td> -->
-                          <td class="col-complete" data-complete=""></td>
-                          <!-- <td class="col-worker"></td> -->
-                          <td class="col-memo"></td>
-                        </tr>
-                        <tr>
-                          <td class="col-num"><!--자동입력--></td>
-                          <td class="col-1depth">교차로</td>
-                          <td class="col-2depth">시스템 관리</td>
-                          <td class="col-3depth">도로관리 목록</td>
-                          <td class="col-4depth"></td>
-                          <td class="col-5depth"></td>
-                          <td class="col-type" data-type=""></td>
-                          <td class="col-url">html/crossroads_road_admin.html</td>
-                          <!-- <td class="col-date"></td> -->
-                          <td class="col-complete" data-complete=""></td>
-                          <!-- <td class="col-worker"></td> -->
-                          <td class="col-memo"></td>
-                        </tr>
-                        <tr>
-                          <td class="col-num"><!--자동입력--></td>
-                          <td class="col-1depth"></td>
-                          <td class="col-2depth"></td>
-                          <td class="col-3depth"></td>
-                          <td class="col-4depth">도로관리 상세</td>
-                          <td class="col-5depth"></td>
-                          <td class="col-type" data-type="모달팝업"></td>
-                          <td class="col-url">html/crossroads_road_admin_view.html</td>
-                          <!-- <td class="col-date"></td> -->
-                          <td class="col-complete" data-complete=""></td>
-                          <!-- <td class="col-worker"></td> -->
-                          <td class="col-memo"></td>
-                        </tr>
-                        <tr>
-                          <td class="col-num"><!--자동입력--></td>
-                          <td class="col-1depth"></td>
-                          <td class="col-2depth"></td>
-                          <td class="col-3depth"></td>
-                          <td class="col-4depth">도로관리 추가</td>
-                          <td class="col-5depth"></td>
-                          <td class="col-type" data-type="모달팝업"></td>
-                          <td class="col-url">html/crossroads_road_admin_add.html</td>
-                          <!-- <td class="col-date"></td> -->
-                          <td class="col-complete" data-complete=""></td>
-                          <!-- <td class="col-worker"></td> -->
-                          <td class="col-memo"></td>
-                        </tr>
-                        <tr>
-                          <td class="col-num"><!--자동입력--></td>
-                          <td class="col-1depth"></td>
-                          <td class="col-2depth"></td>
-                          <td class="col-3depth"></td>
-                          <td class="col-4depth">도로관리 수정</td>
-                          <td class="col-5depth"></td>
-                          <td class="col-type" data-type="모달팝업"></td>
-                          <td class="col-url">html/crossroads_road_admin_edit.html</td>
-                          <!-- <td class="col-date"></td> -->
-                          <td class="col-complete" data-complete=""></td>
-                          <!-- <td class="col-worker"></td> -->
-                          <td class="col-memo"></td>
-                        </tr>
-                        <tr>
-                          <td class="col-num"><!--자동입력--></td>
-                          <td class="col-1depth"></td>
-                          <td class="col-2depth">시스템 설정</td>
-                          <td class="col-3depth">영상인식 ROI 설정 목록</td>
-                          <td class="col-4depth"></td>
-                          <td class="col-5depth"></td>
-                          <td class="col-type" data-type=""></td>
-                          <td class="col-url">html/crossroads_roiset.html</td>
                           <!-- <td class="col-date"></td> -->
                           <td class="col-complete" data-complete=""></td>
                           <!-- <td class="col-worker"></td> -->
