--- a/base/html/set_area_info_add.html
+++ b/base/html/set_area_info_add.html
@@ -119,7 +119,9 @@
     <script>
       // 퍼블리싱 확인용
       $(function () {
-        $('.btn-modal-open').trigger('click');
+        setTimeout(function () {
+          $('.btn-modal-open').trigger('click');
+        }, 20);
       });
     </script>
   </body>
