--- a/base/html/set_point.html
+++ b/base/html/set_point.html
@@ -3,7 +3,7 @@
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <title>구역설정</title>
+    <title>지점설정</title>
     <script src="/base/js/lib/jquery-3.5.1.min.js"></script>
     <script src="/base/js/lib/jquery-ui.min.js"></script>
     <script src="/base/js/lib/semantic.min.js"></script>
@@ -26,7 +26,7 @@
               <i class="right angle icon divider"></i>
               <span class="section">설정</span>
               <i class="right angle icon divider"></i>
-              <div class="active section">구역설정</div>
+              <div class="active section">지점 설정</div>
             </div>
             <!-- //breadcrumb -->
 
@@ -34,6 +34,19 @@
               <div class="inner">
                 <div class="ui segment label-dropdown">
                   <em>행정구역</em>
+                  <div class="selectbox-wrap primary">
+                    <select>
+                      <option value="">전체</option>
+                      <option value="">아이템1</option>
+                      <option value="">아이템2</option>
+                      <option value="">아이템3</option>
+                    </select>
+                  </div>
+                  <!-- //selectbox-wrap -->
+                </div>
+                <!-- //segment -->
+                <div class="ui segment label-dropdown">
+                  <em>지점 유형</em>
                   <div class="selectbox-wrap primary">
                     <select>
                       <option value="">전체</option>
@@ -77,8 +90,6 @@
                   <col />
                   <col />
                   <col />
-                  <col />
-                  <col />
                 </colgroup>
                 <thead>
                   <tr>
@@ -89,13 +100,11 @@
                       </div>
                     </th>
                     <th>No</th>
-                    <th>행정구역</th>
-                    <th>시군구</th>
                     <th>구역 명</th>
-                    <th>위도</th>
-                    <th>경도</th>
-                    <th>표출레벨</th>
-                    <th>기본 구역</th>
+                    <th>지점 유형</th>
+                    <th>지점 ID</th>
+                    <th>지점 명</th>
+                    <th>지점주소</th>
                     <th>수정일시</th>
                   </tr>
                 </thead>
@@ -108,18 +117,11 @@
                       </div>
                     </td>
                     <td>1</td>
-                    <td>서울특별시</td>
-                    <td>종로구</td>
-                    <td>서울시 종로구</td>
-                    <td>37.477980</td>
-                    <td>126.881465</td>
-                    <td>15</td>
-                    <td>
-                      <div class="ui checkbox primary-chkbox txt-none c-bluesky">
-                        <input type="checkbox" />
-                        <label></label>
-                      </div>
-                    </td>
+                    <td>태릉</td>
+                    <td>교차로</td>
+                    <td>1001</td>
+                    <td>태릉입구역</td>
+                    <td>서울 노원구 동일로 지하 992-1</td>
                     <td>2021-06-07 12:31:33</td>
                   </tr>
                   <tr>
@@ -130,18 +132,11 @@
                       </div>
                     </td>
                     <td>1</td>
-                    <td>서울특별시</td>
-                    <td>종로구</td>
-                    <td>서울시 종로구</td>
-                    <td>37.477980</td>
-                    <td>126.881465</td>
-                    <td>15</td>
-                    <td>
-                      <div class="ui checkbox primary-chkbox txt-none c-bluesky">
-                        <input type="checkbox" />
-                        <label></label>
-                      </div>
-                    </td>
+                    <td>태릉</td>
+                    <td>교차로</td>
+                    <td>1001</td>
+                    <td>태릉입구역</td>
+                    <td>서울 노원구 동일로 지하 992-1</td>
                     <td>2021-06-07 12:31:33</td>
                   </tr>
                 </tbody>
