--- a/base/html/set_point_edit.html
+++ b/base/html/set_point_edit.html
@@ -3,7 +3,7 @@
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <title>구역정보 수정 팝업</title>
+    <title>지점정보 수정 팝업</title>
     <script src="/base/js/lib/jquery-3.5.1.min.js"></script>
     <script src="/base/js/lib/jquery-ui.min.js"></script>
     <script src="/base/js/lib/semantic.min.js"></script>
@@ -17,7 +17,7 @@
     <div id="ex" class="modal">
       <div class="modal-container medium">
         <div class="modal-header">
-          <span class="tit">구역 정보</span>
+          <span class="tit">지점 정보</span>
         </div>
         <!-- //modal-header -->
         <div class="modal-body">
@@ -31,40 +31,94 @@
               </colgroup>
               <tbody>
                 <tr>
-                  <th>행정구역</th>
+                  <th rowspan="2" class="rowspan-style1">구역명</th>
                   <td class="pdr-20">
                     <div class="selectbox-wrap rounded">
                       <select disabled>
-                        <option value="">서울특별시</option>
-                        <option value="">경기도</option>
+                        <option value="">선택</option>
+                        <option value="">아이템1</option>
                         <option value="">아이템2</option>
                         <option value="">아이템3</option>
                       </select>
                     </div>
                   </td>
-                  <th class="pdl-15">시/군/구</th>
+                  <th class="pdl-15">지점 유형</th>
                   <td>
                     <div class="selectbox-wrap rounded">
                       <select disabled>
-                        <option value="">종로구</option>
-                        <option value="">--</option>
+                        <option value="">선택</option>
+                        <option value="">아이템1</option>
+                        <option value="">아이템2</option>
+                        <option value="">아이템3</option>
                       </select>
                     </div>
                   </td>
                 </tr>
                 <tr>
-                  <th>구역 명</th>
+                  <td colspan="3">
+                    <button class="ui secondary basic button rounded extend">Map 설정</button>
+                  </td>
+                </tr>
+                <tr>
+                  <th>지점 명</th>
+                  <td colspan="3">
+                    <div class="ui input rounded">
+                      <input type="text" />
+                    </div>
+                  </td>
+                </tr>
+                <tr>
+                  <th>지점 주소</th>
+                  <td colspan="3">
+                    <div class="ui input rounded">
+                      <input type="text" />
+                    </div>
+                  </td>
+                </tr>
+                <tr>
+                  <th>지점 ID</th>
                   <td class="pdr-20">
                     <div class="ui input rounded">
                       <input type="text" />
                     </div>
                   </td>
-                  <th class="pdl-15">표출 레벨</th>
+                  <th class="pdl-15">각도</th>
+                  <td>
+                    <div class="ui input rounded">
+                      <input type="text" />
+                    </div>
+                  </td>
+                </tr>
+                <tr>
+                  <th>도로 개수</th>
+                  <td class="pdr-20">
+                    <div class="selectbox-wrap rounded">
+                      <select>
+                        <option value="">0</option>
+                        <option value="">1</option>
+                        <option value="">2</option>
+                        <option value="">3</option>
+                        <option value="">4</option>
+                        <option value="">5</option>
+                        <option value="">6</option>
+                        <option value="">7</option>
+                        <option value="">8</option>
+                      </select>
+                    </div>
+                  </td>
+                  <th class="pdl-15">횡단보도 개수</th>
                   <td>
                     <div class="selectbox-wrap rounded">
                       <select>
-                        <option value="">15</option>
-                        <option value="">16</option>
+                        <option value="">0</option>
+                        <option value="">1</option>
+                        <option value="">2</option>
+                        <option value="">3</option>
+                        <option value="">4</option>
+                        <option value="">5</option>
+                        <option value="">6</option>
+                        <option value="">7</option>
+                        <option value="">8</option>
                       </select>
                     </div>
                   </td>
@@ -80,21 +134,6 @@
                   <td>
                     <div class="ui input rounded">
                       <input type="text" />
-                    </div>
-                  </td>
-                </tr>
-                <tr>
-                  <th>제한반경(m)</th>
-                  <td class="pdr-20">
-                    <div class="ui input rounded">
-                      <input type="text" />
-                    </div>
-                  </td>
-                  <th class="pdl-15">기본 구역</th>
-                  <td>
-                    <div class="ui checkbox primary-chkbox txt-none c-bluesky">
-                      <input type="checkbox" />
-                      <label></label>
                     </div>
                   </td>
                 </tr>
