코드 관리 목록 및 팝업 작업

--- a/base/html/index.html
+++ b/base/html/index.html
@@ -404,9 +404,9 @@
                           <td class="col-4depth"></td>
                           <td class="col-5depth"></td>
                           <td class="col-type" data-type=""></td>
-                          <td class="col-url">html/set_code_admin.html</td>
+                          <td class="col-url">html/set_code_list.html</td>
                           <!-- <td class="col-date"></td> -->
-                          <td class="col-complete" data-complete=""></td>
+                          <td class="col-complete" data-complete="완료"></td>
                           <!-- <td class="col-worker"></td> -->
                           <td class="col-memo"></td>
                         </tr>
@@ -420,7 +420,7 @@
                           <td class="col-type" data-type="모달팝업"></td>
                           <td class="col-url">html/set_code_view.html</td>
                           <!-- <td class="col-date"></td> -->
-                          <td class="col-complete" data-complete=""></td>
+                          <td class="col-complete" data-complete="완료"></td>
                           <!-- <td class="col-worker"></td> -->
                           <td class="col-memo"></td>
                         </tr>
@@ -434,7 +434,7 @@
                           <td class="col-type" data-type="모달팝업"></td>
                           <td class="col-url">html/set_code_add.html</td>
                           <!-- <td class="col-date"></td> -->
-                          <td class="col-complete" data-complete=""></td>
+                          <td class="col-complete" data-complete="완료"></td>
                           <!-- <td class="col-worker"></td> -->
                           <td class="col-memo"></td>
                         </tr>
@@ -448,7 +448,7 @@
                           <td class="col-type" data-type="모달팝업"></td>
                           <td class="col-url">html/set_code_edit.html</td>
                           <!-- <td class="col-date"></td> -->
-                          <td class="col-complete" data-complete=""></td>
+                          <td class="col-complete" data-complete="완료"></td>
                           <!-- <td class="col-worker"></td> -->
                           <td class="col-memo"></td>
                         </tr>
